--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <p class="mb-1">Insgesamt beantwortete Fragen: <span id="totalAnswered" class="font-bold text-gray-900">0</span></p>
                 <p class="mb-1">Richtige Antworten: <span id="correctAnswers" class="font-bold text-green-600">0</span></p>
                 <p class="mb-1">Zu wiederholende Verben: <span id="verbsToReview" class="font-bold text-red-500">0</span></p>
-                <p>Studienzeit: <span id="studyTime" class="font-bold text-gray-900">0m 0s</span></p>
+                <p>Zeit Genutz zum Üben: <span id="studyTime" class="font-bold text-gray-900">0m 0s</span></p>
                 <button id="clearProgressBtn" class="btn btn-danger mt-6">Fortschritt löschen</button>
             </div>
         </div>
